Fix body overflow

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ header {
 }
 
 .body-info {
+    text-align: center;
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
@@ -112,6 +113,8 @@ header {
     display: flex;
     justify-content: space-around;
     width: 90%;
+    flex-wrap: wrap;
+    gap: 16px;
 }
 
 .body-container {
